--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
 
 
     <body>
-        <p>Hello</p>
+        <div id="title">Tic Tac Toe</div>
+
+        <div id="reset">
+            <button id="reset-button">Reset</button>
+        </div>
+
+        <div id="commentary">
+            Commentary goes here (whose turn it is, winner, etc.)
+        </div>
+
+        <div id="game">
+            <div id="board">
+                <button class="cell" id="cell-1">O</button>
+                <button class="cell" id="cell-2">X</button>
+                <button class="cell" id="cell-3"></button>
+
+                <button class="cell" id="cell-4"></button>
+                <button class="cell" id="cell-5"></button>
+                <button class="cell" id="cell-6"></button>
+
+                <button class="cell" id="cell-7"></button>
+                <button class="cell" id="cell-8"></button>
+                <button class="cell" id="cell-9"></button>
+            </div>
+        </div>
     </body>
 
 </html>
