game is fully playable through display

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <button id="reset-button">Reset</button>
         </div>
 
-        <div id="commentary">
-            Commentary goes here (whose turn it is, winner, etc.)
-        </div>
+        <div id="commentary"></div>
 
         <div id="game">
             <div id="board">
+                <!-- What it should look like after DisplayController is executed -->
+                <!--
                 <button class="cell" id="cell-1">O</button>
                 <button class="cell" id="cell-2">X</button>
                 <button class="cell" id="cell-3"></button>
@@ -36,6 +36,7 @@
                 <button class="cell" id="cell-7"></button>
                 <button class="cell" id="cell-8"></button>
                 <button class="cell" id="cell-9"></button>
+                -->
             </div>
         </div>
     </body>
