added player name inputs and start button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <button id="reset-button">Reset</button>
         </div>
 
+        <div id="start">
+            <input id="p1-name" type="text" placeholder="player 1 name">
+            <input id="p2-name" type="text" placeholder="player 2 name">
+            <button id="start-button">Start Game!</button>
+        </div>
+
         <div id="commentary"></div>
 
         <div id="game">
